--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "progbits",
   "license": "MIT",
   "scripts": {
+    "format": "prettier --write .",
     "lint": "eslint --ignore-path .gitignore .",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development"
@@ -12,8 +13,16 @@
   "devDependencies": {
     "eslint": "^8.34.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.8.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "prettier": {
+    "printWidth": 80,
+    "tabWidth": 2,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "semi": false
   }
 }
