--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,9 +2,9 @@ name: Build and test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   build:
@@ -16,5 +16,5 @@ jobs:
         with:
           node-version: 18.x
           cache: 'npm'
-      - run: npm format
-      - run: npm lint
+      - run: npm run format -- --check
+      - run: npm run lint
