--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,5 +16,6 @@ jobs:
         with:
           node-version: 18.x
           cache: 'npm'
+      - run: npm install
       - run: npm run format -- --check
       - run: npm run lint
