--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "A high performance line plotting demonstration.",
   "author": "progbits",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --ignore-path .gitignore .",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development"
   },
   "devDependencies": {
+    "@jest/globals": "^29.4.2",
     "eslint": "^8.34.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^26.6.3",
     "prettier": "^2.8.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
